--- a/FAQ.html
+++ b/FAQ.html
@@ -10,6 +10,22 @@
       rel="stylesheet"
     />
 
+    <style>
+      body,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        font-family: "Lalezar", cursive;
+        font-family: "Montserrat", sans-serif;
+      }
+      .w3-bar-block .w3-bar-item {
+        padding: 20px;
+      }
+    </style>
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -107,105 +123,121 @@
       id="home"
       class="s-home target-section"
       data-parallax="scroll"
-      data-image-src="images/servicesbg.jpg"
+      data-image-src="images/FAQ.jpg"
       data-natural-width="1000"
-      data-natural-height="1000"
+      data-natural-height="500"
       data-position-y="top"
     >
       <div class="home-content">
         <div data-aos="fade-up" class="headpad">
-          <h1 class="display-1 display-1--light">What we do!</h1>
+          <h1 class="display-1 display-1--light">FAQ</h1>
           <div class="col-full-con">
-            <h2 class="subhead subhead--light">
-              We advocate for applied role-playing games in classrooms and
-              therapeutic settings.
+            <h2 class="subhead subhead--light" style="margin-left: 17rem">
+              Frequently Asked Questions
             </h2>
-            <p class="subheading">
-              Are you having trouble learning fromtraditional forms of
-              education? Do you feel like you need something more fun and
-              hands-on? Located in Ottawa, Ont., Playstories Canada helps
-              students of all ages receive therapeutically active-learning
-              educational training through play using Tabletop, Live-Action Role
-              Play (LARP), and Improv games.These games can be helpful for any
-              subject you are struggling with.<br />We provide detailed
-              instruction on what games are played, how to play the games
-              correctly, and hands-on training on how you can run your own
-              events.Due to COVID-19 safety precautions,we will be engaging in
-              active learning online. In any case, all of our games will be
-              played in a group setting to encourage active-participation and
-              creative play.*Check out our FB, LinkedIn, and Twitter, or sign up
-              for a workshop now*
-            </p>
           </div>
         </div>
         <!-- end section-header -->
 
-        <!-- First Photo Grid-->
-        <div class="w3-center w3-row" id="food">
-          <div class="w3-col w3-card serv_card_size_left">
-            <img
-              src="images/workshops.png"
-              alt="Sandwich"
-              class="serv_image_size"
-            />
-            <h3>Workshops and Experiential Demonstration</h3>
-            <p style="margin: 1rem 1rem 7rem 1rem">
-              An immersive experience of larp, improv, or tabletop narrative
-              play. Experience the deep creative power of this exciting art form
-              and learn its pedagogical possibilities. Hands on training through
-              play of tabletop, larp, and improv. These meetings present active
-              participation in RPGs, larp, and improv. Come out and actually
-              play the games. Receive clear and detailed instruction on how to
-              run your own events.
-            </p>
-          </div>
-          <div class="w3-col w3-card serv_card_size">
-            <img src="images/school.png" alt="Steak" class="serv_image_size" />
-            <h3>RPG School</h3>
-            <p style="margin: 1rem 1rem 0rem 1rem">
-              This is the most exciting active learning initiative. Inspired by
-              the Danish Østerskov Efterskole and Efterskolen Epos, two "larp
-              schools" that ustilize applied role-playing games to ground
-              student education as a total experiencial process. We are actively
-              seeking partnerships to build and deliver this kind of learning
-              environment in Canada. For 2020, we are excited to announce our
-              RPG School will be running locally in Ottawa at a grassroots
-              level! Look here and on social media for further details on how
-              you can learn to play, run, and create in this powerful medium!!!
-            </p>
-          </div>
-        </div>
+        <div class="row">
+          <div class="about-process process block-1-2 block-tab-full">
+            <div class="process__vline-left"></div>
+            <div class="process__vline-right"></div>
 
-        <div class="w3-center w3-row" id="food">
-          <div class="w3-center w3-col w3-card serv_card_size_left">
-            <img
-              src="images/courses.png"
-              alt="Sandwich"
-              class="serv_image_size"
-            />
-            <h3>Courses</h3>
-            <p style="margin: 1rem 1rem 7rem 1rem">
-              Comprehensive training on active learning strategies and design of
-              complete, fun activities that replace traditional instruction.
-              Active learning in the classroom. Engage through creative play,
-              Calibration and content navigation,
-            </p>
+            <div
+              class="col-block process__col1"
+              data-aos="fade-up"
+              style="margin-top: 5rem; color: white"
+            >
+              <div class="process__text">
+                <h4 style="color: white">
+                  What are the benefits of active-learning?
+                </h4>
+                <p>
+                  • Do you remember learning how to ride a bike when you were a
+                  kid? Your parents probably instructed you how to peddle and
+                  steer, but you never really learned until you started peddling
+                  yourself.<br />
+                  It doesn’t matter whether you’re learning how to ride a bike,
+                  or starting a new job, active-learning strategies provide
+                  hands-on learning benefits that cannot be replaced.<br />
+                  • Group active-learning game sessions increase student
+                  engagement, critical thinking, and real-world collaborative
+                  skills which are essential in every workplace today.<br />
+                  • Most importantly…. It’s a FUN way to learn!
+                </p>
+              </div>
+            </div>
+            <div
+              class="col-block process__col1"
+              data-aos="fade-up"
+              style="margin-top: 5rem; color: white"
+            >
+              <div class="process__text">
+                <h4 style="color: white">
+                  What is a Live-Action Role Play (LARP) game? How are they
+                  educational games?
+                </h4>
+
+                <p>
+                  • LARP games create fictional settings where players
+                  physically act as characters while trying to solve the
+                  real-world plot of the game. <br />
+                  • Owner and founder, Shawn Roske, wrote an award-winning LARP
+                  in 2017. In this game, the players acted as staff of a group
+                  home for the developmentally disabled, struggling to discuss
+                  the sexuality of residents. The goal of the game was for the
+                  characters to create a corporate policy to deal with the
+                  matter.<br />
+                  • This LARP exercise intentionally assigns roles to create
+                  collaboration and conflict to develop deliberative skills
+                  amongst the players.
+                </p>
+              </div>
+            </div>
+            <div
+              class="col-block process__col1"
+              data-aos="fade-up"
+              style="margin-top: 5rem; color: white"
+            >
+              <div class="process__text">
+                <h4 style="color: white">
+                  How do you stop a Live Action Role Play exercise mid-game?
+                </h4>
+
+                <p>
+                  • At Playstories Canada, the player is more important than the
+                  game. If a person is overwhelmed or needs a break from
+                  playing, we kindly ask them to make an “X,” with their arms to
+                  signal a stoppage of play.
+                </p>
+              </div>
+            </div>
+            <div
+              class="col-block process__col1"
+              data-aos="fade-up"
+              style="margin-top: 5rem; color: white"
+            >
+              <div class="process__text">
+                <h4 style="color: white">
+                  How long is the average game session and how many players can
+                  play?
+                </h4>
+
+                <p>
+                  • Whether it is a Tabletop, or Improv, Role-Play game, they
+                  generally can take anywhere from 1-4 hours, sometimes
+                  longer.<br />
+                  • Our games are group activities which means several players
+                  are needed. The number of players can range anywhere from 2 to
+                  12.
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="w3-col w3-card serv_card_size">
-            <img
-              src="images/think-tanks.png"
-              alt="Steak"
-              class="serv_image_size"
-            />
-            <h3>Think Tanks</h3>
-            <p style="margin: 1rem 1rem 7rem 1rem">
-              Peer driven meetings to help each other incorporate active
-              learning strategies into learning plans and curriculum. Active
-              learning in the classroom. Engage through creative play,
-              Calibration and content navigation,
-            </p>
-          </div>
+          <!-- end process -->
         </div>
+        <!-- end about-stats -->
 
         <div class="w3-row w3-center" style="margin-top: 5rem">
           <h3 class="subhead subhead--light">Follow Us</h3>
@@ -232,6 +264,7 @@
         </div>
         <!-- end contact-secondary -->
       </div>
+      <!-- end contact-secondary -->
     </section>
     <!-- end s-home -->
 
